[package]
name = "maid"
version = "0.4.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/theMackabu/maid"
description = "Fast local task runner for project scripts, dependencies, and cached build steps."
build = "build.rs"

[[bin]]
name = "maid"
path = "src/main.rs"

[dependencies]
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

[build-dependencies]
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
