[package]
name = "maid"
version = "0.5.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/theMackabu/maid"
description = "Fast local task runner for project scripts, dependencies, and cached build steps."
build = "build.rs"

include = [
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE.txt",
  "/Maidfile.toml",
  "/README.md",
  "/build.rs",
  "/build/**",
  "/generated/maid-main.mjs",
  "/generated/maid-sandbox-run.mjs",
  "/src/main.rs"
]

[[bin]]
name = "maid"
path = "src/main.rs"

[dependencies]
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

[build-dependencies]
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
